// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Throughput when data is loaded has the correct throughput 1`] = `
Array [
  Object {
    "x": 1627885860000,
    "y": 0,
  },
  Object {
    "x": 1627885920000,
    "y": 5,
  },
  Object {
    "x": 1627885980000,
    "y": 11,
  },
  Object {
    "x": 1627886040000,
    "y": 4,
  },
  Object {
    "x": 1627886100000,
    "y": 2,
  },
  Object {
    "x": 1627886160000,
    "y": 11,
  },
  Object {
    "x": 1627886220000,
    "y": 3,
  },
  Object {
    "x": 1627886280000,
    "y": 8,
  },
  Object {
    "x": 1627886340000,
    "y": 7,
  },
  Object {
    "x": 1627886400000,
    "y": 7,
  },
  Object {
    "x": 1627886460000,
    "y": 8,
  },
  Object {
    "x": 1627886520000,
    "y": 11,
  },
  Object {
    "x": 1627886580000,
    "y": 10,
  },
  Object {
    "x": 1627886640000,
    "y": 5,
  },
  Object {
    "x": 1627886700000,
    "y": 6,
  },
  Object {
    "x": 1627886760000,
    "y": 7,
  },
  Object {
    "x": 1627886820000,
    "y": 8,
  },
  Object {
    "x": 1627886880000,
    "y": 8,
  },
  Object {
    "x": 1627886940000,
    "y": 8,
  },
  Object {
    "x": 1627887000000,
    "y": 4,
  },
  Object {
    "x": 1627887060000,
    "y": 10,
  },
  Object {
    "x": 1627887120000,
    "y": 7,
  },
  Object {
    "x": 1627887180000,
    "y": 11,
  },
  Object {
    "x": 1627887240000,
    "y": 4,
  },
  Object {
    "x": 1627887300000,
    "y": 4,
  },
  Object {
    "x": 1627887360000,
    "y": 1,
  },
  Object {
    "x": 1627887420000,
    "y": 11,
  },
  Object {
    "x": 1627887480000,
    "y": 6,
  },
  Object {
    "x": 1627887540000,
    "y": 9,
  },
  Object {
    "x": 1627887600000,
    "y": 10,
  },
  Object {
    "x": 1627887660000,
    "y": 9,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Throughput when data is loaded with time comparison has the correct throughput 1`] = `
Object {
  "currentPeriod": Array [
    Object {
      "x": 1627886760000,
      "y": 0,
    },
    Object {
      "x": 1627886820000,
      "y": 8,
    },
    Object {
      "x": 1627886880000,
      "y": 8,
    },
    Object {
      "x": 1627886940000,
      "y": 8,
    },
    Object {
      "x": 1627887000000,
      "y": 4,
    },
    Object {
      "x": 1627887060000,
      "y": 10,
    },
    Object {
      "x": 1627887120000,
      "y": 7,
    },
    Object {
      "x": 1627887180000,
      "y": 11,
    },
    Object {
      "x": 1627887240000,
      "y": 4,
    },
    Object {
      "x": 1627887300000,
      "y": 4,
    },
    Object {
      "x": 1627887360000,
      "y": 1,
    },
    Object {
      "x": 1627887420000,
      "y": 11,
    },
    Object {
      "x": 1627887480000,
      "y": 6,
    },
    Object {
      "x": 1627887540000,
      "y": 9,
    },
    Object {
      "x": 1627887600000,
      "y": 10,
    },
    Object {
      "x": 1627887660000,
      "y": 9,
    },
  ],
  "previousPeriod": Array [
    Object {
      "x": 1627886760000,
      "y": 0,
    },
    Object {
      "x": 1627886820000,
      "y": 5,
    },
    Object {
      "x": 1627886880000,
      "y": 11,
    },
    Object {
      "x": 1627886940000,
      "y": 4,
    },
    Object {
      "x": 1627887000000,
      "y": 2,
    },
    Object {
      "x": 1627887060000,
      "y": 11,
    },
    Object {
      "x": 1627887120000,
      "y": 3,
    },
    Object {
      "x": 1627887180000,
      "y": 8,
    },
    Object {
      "x": 1627887240000,
      "y": 7,
    },
    Object {
      "x": 1627887300000,
      "y": 7,
    },
    Object {
      "x": 1627887360000,
      "y": 8,
    },
    Object {
      "x": 1627887420000,
      "y": 11,
    },
    Object {
      "x": 1627887480000,
      "y": 10,
    },
    Object {
      "x": 1627887540000,
      "y": 5,
    },
    Object {
      "x": 1627887600000,
      "y": 6,
    },
    Object {
      "x": 1627887660000,
      "y": 7,
    },
  ],
}
`;
